codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_dangerous_handler.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
assertion_line: 1256
expression: "render_lines(&view, 112)"
---
                                                                                                                
  PreToolUse hooks                                                                                              
  1 hook needs review before it can run.                                                                        
                                                                                                                
  [!] Hook 1 · dangerous                                                                                        
                                                                                                                
  Event     PreToolUse                                                                                          
  Matcher   Bash                                                                                                
  Source    User config - /tmp/hooks.json                                                                       
  Command   /tmp/pre-tool-use-check.sh                                                                          
  Timeout   30s                                                                                                 
  Trust     Dangerous - disabled by auto-review                                                                 
  Reviewer  hook_auto_review                                                                                    
  Danger    reads SSH keys and posts them to a remote host                                                      
                                                                                                                
  Press t to trust; esc to go back
