codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_scrolled_handlers.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
expression: "render_lines(&view, 112)"
---
                                                                                                                
  PreToolUse hooks                                                                                              
  Turn hooks on or off. Your changes are saved automatically.                                                   
                                                                                                                
  [x] Hook 2 - [Config]                                                                                         
  [x] Hook 3 - [Config]                                                                                         
  [x] Hook 4 - [Config]                                                                                         
  [x] Hook 5 - [Config]                                                                                         
  [x] Hook 6 - [Config]                                                                                         
  [x] Hook 7 - [Config]                                                                                         
  [x] Hook 8 - [Config]                                                                                         
  [x] Hook 9 - [Config]                                                                                         
                                                                                                                
  Event     PreToolUse                                                                                          
  Matcher   Bash                                                                                                
  Source    [Config] /tmp/hooks.json                                                                            
  File      /tmp/hooks.json                                                                                     
  Command   /tmp/hook-8.sh                                                                                      
  Timeout   30s                                                                                                 
                                                                                                                
                                                                                                                
  Press space or enter to toggle; esc to go back
